--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "portals",
   "version": "0.1.0",
+  "homepage": "https://codedamn.github.io/html-portals/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
@@ -12,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
